# FinanceAI_agent

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
Tests/: test_smoke.py
