[project]
name = "financeai-agent"
version = "0.1.0"
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I"]
ignore = []
exclude = [".git", ".venv", "build", "dist"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --maxfail=1 --cov=. --cov-report=term-missing --cov-fail-under=65"
testpaths = ["Tests"]